--- a/StoryCare-Buildboard/report.yaml
+++ b/StoryCare-Buildboard/report.yaml
@@ -1,6 +1,6 @@
 company:
   name: StoryCare
-  logo: logo-icon.png
+  logo: logo-whitebg.png
 product_hmw: How might we get patients to follow their discharge instructions?
 tags:
   - Health Tech
