--- a/StoryCare-Buildboard/report.yaml
+++ b/StoryCare-Buildboard/report.yaml
@@ -26,7 +26,7 @@ team:
   - name: Kripa Agarwal
     email: as3624@cornell.edu
     picture: kripa.jpg
-    program: HT
+    program: CS
   - name: Lucien Hwang
     email: huany918@newschool.edu
     picture: Lucien.jpg
